@@ -555,9 +555,10 @@
     <email>kmaraas@broadpark.no</email>
   </person>
   <!-- oc translation coordinator -->
-  <person id="x-joanluclaborda">
-    <name>Joan Luc Labòrda</name>
-    <email>joanluc.laborda@free.fr</email>
+  <person id="x-yannigmarchegay">
+    <name>Yannig Marchegay</name>
+    <email>yannig@marchegay.org</email>
+    <webpage>http://yannig.marchegay.org</webpage>
   </person>
   <!-- ang translation coordinator -->
   <person id="x-jamesrjohnson">
