@@ -404,7 +404,9 @@
   </team>
   <team id="oc">
     <_language id="oc">Occitan</_language>
-    <coordinator id="x-joanluclaborda"/>
+    <coordinator id="x-yannigmarchegay"/>
+    <mailing-list>ubuntu-l10n-oci@lists.ubuntu.com</mailing-list>
+    <mailing-list-subscribe>https://lists.ubuntu.com/mailman/listinfo/ubuntu-l10n-oci</mailing-list-subscribe>
   </team>
   <team id="ang">
     <_language id="ang">Old English</_language>
