@@ -1,3 +1,8 @@
+2007-01-07  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-teams.xml.in:
+	* people.xml.in: Update Occitan coordinator.
+
 2007-01-07  Hendrik Richter  <hendrikr@gnome.org>
 
 	* people.xml.in: Update myself.
